--- a/pages/tab/tab.wxml
+++ b/pages/tab/tab.wxml
@@ -1,3 +1,4 @@
 <!--pages/tab/tab.wxml-->
 <!-- <text>pages/tab/tab.wxml</text> -->
 <view>拿到的数据：{{data}}</view>
+<view bindtap="sendRequest">测试请求方法</view>
